course-03/udacity-c3-deployment/k8s/istio/frontend-deployment.yaml
apiVersion: v1
kind: Service
metadata:
  name: frontend
  labels:
    app: frontend
spec:
  ports:
  - name: http
    port: 8100
    targetPort: http
  selector:
    app: frontend
    version: v1.0.0
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: frontend
  labels:
    app: frontend    
  
spec:
  replicas: 1
  selector:
    matchLabels:
        app: frontend
        version: v1.0.0
  template:
    metadata:
      labels:
        app: frontend
        version: v1.0.0     
    spec:
      containers:
      - image: selmy/udacity-frontend
        name: frontend 
        imagePullPolicy: IfNotPresent
        ports:
        - name: http
          containerPort: 80
---
