course-03/udacity-c3-deployment/k8s/istio/frontend-service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    service: frontend
  name: frontend
spec:
  ports:
  - name: http
    port: 8100
    targetPort: http
  selector:
    service: frontend
    version: v1.0.0
#  type: LoadBalancer
